--- a/kitchen.dokken.yml
+++ b/kitchen.dokken.yml
@@ -1,14 +1,10 @@
----
 driver:
   name: dokken
   privileged: true
-  chef_version: <%= ENV['CHEF_VERSION'] || 'latest' %>
+  chef_version: <%= ENV['CHEF_VERSION'] || 'current' %>
 
-transport:
-  name: dokken
-
-provisioner:
-  name: dokken
+transport: { name: dokken }
+provisioner: { name: dokken }
 
 platforms:
   - name: almalinux-8
@@ -16,20 +12,15 @@ platforms:
       image: dokken/almalinux-8
       pid_one_command: /usr/lib/systemd/systemd
 
-  - name: amazonlinux-2
+  - name: almalinux-9
     driver:
-      image: dokken/amazonlinux-2
+      image: dokken/almalinux-9
       pid_one_command: /usr/lib/systemd/systemd
 
-  - name: debian-10
+  - name: amazonlinux-2023
     driver:
-      image: dokken/debian-10
-      pid_one_command: /bin/systemd
-
-  - name: debian-11
-    driver:
-      image: dokken/debian-11
-      pid_one_command: /bin/systemd
+      image: dokken/amazonlinux-2023
+      pid_one_command: /usr/lib/systemd/systemd
 
   - name: centos-7
     driver:
@@ -41,9 +32,64 @@ platforms:
       image: dokken/centos-stream-8
       pid_one_command: /usr/lib/systemd/systemd
 
+  - name: centos-stream-9
+    driver:
+      image: dokken/centos-stream-9
+      pid_one_command: /usr/lib/systemd/systemd
+
+  - name: debian-9
+    driver:
+      image: dokken/debian-9
+      pid_one_command: /bin/systemd
+
+  - name: debian-10
+    driver:
+      image: dokken/debian-10
+      pid_one_command: /bin/systemd
+
+  - name: debian-11
+    driver:
+      image: dokken/debian-11
+      pid_one_command: /bin/systemd
+
+  - name: debian-12
+    driver:
+      image: dokken/debian-12
+      pid_one_command: /bin/systemd
+
   - name: fedora-latest
     driver:
       image: dokken/fedora-latest
+      pid_one_command: /usr/lib/systemd/systemd
+
+  - name: opensuse-leap-15
+    driver:
+      image: dokken/opensuse-leap-15
+      pid_one_command: /usr/lib/systemd/systemd
+
+  - name: oraclelinux-7
+    driver:
+      image: dokken/oraclelinux-7
+      pid_one_command: /usr/lib/systemd/systemd
+
+  - name: oraclelinux-8
+    driver:
+      image: dokken/oraclelinux-8
+      pid_one_command: /usr/lib/systemd/systemd
+
+  - name: oraclelinux-9
+    driver:
+      image: dokken/oraclelinux-9
+      pid_one_command: /usr/lib/systemd/systemd
+
+  - name: rockylinux-8
+    driver:
+      image: dokken/rockylinux-8
+      pid_one_command: /usr/lib/systemd/systemd
+
+  - name: rockylinux-9
+    driver:
+      image: dokken/rockylinux-9
       pid_one_command: /usr/lib/systemd/systemd
 
   - name: ubuntu-18.04
@@ -56,12 +102,12 @@ platforms:
       image: dokken/ubuntu-20.04
       pid_one_command: /bin/systemd
 
-  - name: opensuse-leap-15
+  - name: ubuntu-22.04
     driver:
-      image: dokken/opensuse-leap-15
-      pid_one_command: /usr/lib/systemd/systemd
+      image: dokken/ubuntu-22.04
+      pid_one_command: /bin/systemd
 
-  - name: rockylinux-8
+  - name: ubuntu-23.04
     driver:
-      image: dokken/rockylinux-8
-      pid_one_command: /usr/lib/systemd/systemd
+      image: dokken/ubuntu-23.04
+      pid_one_command: /bin/systemd
