Enable EL9 CI testing

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,14 +24,17 @@ jobs:
       matrix:
         os:
           - "almalinux-8"
+          - "almalinux-9"
           - "amazonlinux-2"
           - "centos-7"
           - "centos-stream-8"
+          - "centos-stream-9"
           - "debian-10"
           - "debian-11"
           - "fedora-latest"
           - "opensuse-leap-15"
           - "rockylinux-8"
+          - "rockylinux-9"
           - "ubuntu-1804"
           - "ubuntu-2004"
         suite:
@@ -67,9 +70,15 @@ jobs:
             suite: "nginx-full"
           - os: "centos-stream-8"
             suite: "nginx-full"
+          - os: "centos-stream-9"
+            suite: "nginx-full"
           - os: "almalinux-8"
             suite: "nginx-full"
+          - os: "almalinux-9"
+            suite: "nginx-full"
           - os: "rockylinux-8"
+            suite: "nginx-full"
+          - os: "rockylinux-9"
             suite: "nginx-full"
           - os: "amazonlinux"
             suite: "nginx-full"
