--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,14 +24,17 @@ jobs:
       matrix:
         os:
           - "almalinux-8"
-          - "amazonlinux-2"
+          - "almalinux-9"
+          - "amazonlinux-2023"
           - "centos-7"
           - "centos-stream-8"
+          - "centos-stream-9"
           - "debian-10"
           - "debian-11"
           - "fedora-latest"
           - "opensuse-leap-15"
           - "rockylinux-8"
+          - "rockylinux-9"
           - "ubuntu-1804"
           - "ubuntu-2004"
         suite:
@@ -45,7 +48,7 @@ jobs:
             suite: "repo"
           - os: "centos-7"
             suite: "distro"
-          - os: "amazonlinux-2"
+          - os: "amazonlinux-2023"
             suite: "epel"
           - os: "debian-9"
             suite: "epel"
@@ -61,15 +64,21 @@ jobs:
             suite: "epel"
           - os: "opensuse-leap-15"
             suite: "epel"
-          - os: "amazonlinux-2"
+          - os: "amazonlinux-2023"
             suite: "nginx-full"
           - os: "centos-7"
             suite: "nginx-full"
           - os: "centos-stream-8"
             suite: "nginx-full"
+          - os: "centos-stream-9"
+            suite: "nginx-full"
           - os: "almalinux-8"
             suite: "nginx-full"
+          - os: "almalinux-9"
+            suite: "nginx-full"
           - os: "rockylinux-8"
+            suite: "nginx-full"
+          - os: "rockylinux-9"
             suite: "nginx-full"
           - os: "amazonlinux"
             suite: "nginx-full"
@@ -81,7 +90,7 @@ jobs:
             suite: "nginx-full"
           - os: "opensuse-leap-15"
             suite: "nginx-full"
-          - os: "amazonlinux-2"
+          - os: "amazonlinux-2023"
             suite: "repo-overrides"
           - os: "centos-7"
             suite: "repo-overrides"
