--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,6 +17,48 @@ jobs:
       statuses: write
       issues: write
 
+  integration-epel:
+    needs: lint-unit
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os:
+          - "almalinux-8"
+          - "almalinux-9"
+          - "centos-stream-8"
+          - "centos-stream-9"
+          - "rockylinux-8"
+          - "rockylinux-9"
+        suite:
+          - "epel"
+        steps: &steps
+          - name: Check out code
+            uses: actions/checkout@v4
+          - name: Install Chef
+            uses: actionshub/chef-install@3.0.0
+          - name: Dokken
+            uses: actionshub/test-kitchen@3.0.0
+            env:
+              CHEF_LICENSE: accept-no-persist
+              KITCHEN_LOCAL_YAML: kitchen.dokken.yml
+            with:
+              suite: ${{ matrix.suite }}
+              os: ${{ matrix.os }}
+
+  integration-nginx-full:
+    needs: lint-unit
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os:
+          - "ubuntu-2204"
+          - "ubuntu-2404"
+        suite:
+          - "distro-nginx-full"
+      fail-fast: false
+    steps:
+      <<: *steps
+
   integration:
     needs: lint-unit
     runs-on: ubuntu-latest
@@ -26,91 +68,26 @@ jobs:
           - "almalinux-8"
           - "almalinux-9"
           - "amazonlinux-2023"
-          - "centos-7"
           - "centos-stream-8"
           - "centos-stream-9"
-          - "debian-10"
           - "debian-11"
-          - "opensuse-leap-15"
+          - "debian-12"
           - "rockylinux-8"
           - "rockylinux-9"
-          - "ubuntu-1804"
-          - "ubuntu-2004"
+          - "ubuntu-2204"
+          - "ubuntu-2404"
         suite:
           - "distro"
           - "repo"
           - "repo-overrides"
-          - "epel"
-          - "nginx-full"
-        exclude:
-          - os: "opensuse-leap-15"
-            suite: "repo"
-          - os: "centos-7"
-            suite: "distro"
-          - os: "amazonlinux-2023"
-            suite: "epel"
-          - os: "debian-9"
-            suite: "epel"
-          - os: "debian-10"
-            suite: "epel"
-          - os: "debian-11"
-            suite: "epel"
-          - os: "ubuntu-1804"
-            suite: "epel"
-          - os: "ubuntu-2004"
-            suite: "epel"
-          - os: "fedora-latest"
-            suite: "epel"
-          - os: "opensuse-leap-15"
-            suite: "epel"
-          - os: "amazonlinux-2023"
-            suite: "nginx-full"
-          - os: "centos-7"
-            suite: "nginx-full"
-          - os: "centos-stream-8"
-            suite: "nginx-full"
-          - os: "centos-stream-9"
-            suite: "nginx-full"
-          - os: "almalinux-8"
-            suite: "nginx-full"
-          - os: "almalinux-9"
-            suite: "nginx-full"
-          - os: "rockylinux-8"
-            suite: "nginx-full"
-          - os: "rockylinux-9"
-            suite: "nginx-full"
-          - os: "amazonlinux"
-            suite: "nginx-full"
-          - os: "debian-10"
-            suite: "nginx-full"
-          - os: "debian-11"
-            suite: "nginx-full"
-          - os: "fedora-latest"
-            suite: "nginx-full"
-          - os: "opensuse-leap-15"
-            suite: "nginx-full"
-          - os: "amazonlinux-2023"
-            suite: "repo-overrides"
-          - os: "centos-7"
-            suite: "repo-overrides"
-          - os: "debian-10"
-            suite: "repo-overrides"
-          - os: "opensuse-leap-15"
-            suite: "repo-overrides"
-          - os: "ubuntu-1804"
-            suite: "repo-overrides"
       fail-fast: false
-
     steps:
-      - name: Check out code
-        uses: actions/checkout@v4
-      - name: Install Chef
-        uses: actionshub/chef-install@3.0.0
-      - name: Dokken
-        uses: actionshub/test-kitchen@3.0.0
-        env:
-          CHEF_LICENSE: accept-no-persist
-          KITCHEN_LOCAL_YAML: kitchen.dokken.yml
-        with:
-          suite: ${{ matrix.suite }}
-          os: ${{ matrix.os }}
+      <<: *steps
+
+  final:
+    runs-on: ubuntu-latest
+    needs: [integration, integration-nginx-full, integration-epel]
+    steps:
+      - run: echo ${{needs.integration.outputs}}
+      - run: echo ${{needs.integration-nginx-full.outputs}}
+      - run: echo ${{needs.integration-epel.outputs}}
