--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ name: ci
 
 jobs:
   lint-unit:
-    uses: sous-chefs/.github/.github/workflows/lint-unit.yml@3.1.1
+    uses: sous-chefs/.github/.github/workflows/lint-unit.yml@main
     permissions:
       actions: write
       checks: write
@@ -23,25 +23,45 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [
-          "almalinux-8",
-          "almalinux-9",
-          "amazonlinux-2023",
-          "centos-stream-8",
-          "centos-stream-9",
-          "debian-11",
-          "debian-12",
-          "rockylinux-8",
-          "rockylinux-9",
-          "ubuntu-2204",
-          "ubuntu-2404",
-        ]
-        suite: ["distro", "repo", "repo-overrides"]
+        os:
+          [
+            "almalinux-8",
+            "almalinux-9",
+            "amazonlinux-2023",
+            "centos-stream-9",
+            "centos-stream-10",
+            "debian-11",
+            "debian-12",
+            "rockylinux-8",
+            "rockylinux-9",
+            "ubuntu-2204",
+            "ubuntu-2404",
+          ]
+        suite: ["distro", "repo"]
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
       - uses: ./.github/actions/test-kitchen
         with:
           suite: ${{ matrix.suite }}
           os: ${{ matrix.os }}
+
+  # TODO: This is currently broken
+  # integration-repo-overrides:
+  #   needs: lint-unit
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       os: ["ubuntu-2204", "ubuntu-2404"]
+  #       suite: ["repo-overrides"]
+  #   steps:
+  #     - name: Check out code
+  #       uses: actions/checkout@v4
+  #     - uses: ./.github/actions/test-kitchen
+  #       with:
+  #         suite: ${{ matrix.suite }}
+  #         os: ${{ matrix.os }}
 
   integration-epel:
     needs: lint-unit
@@ -49,16 +69,19 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [
-          "almalinux-8",
-          "almalinux-9",
-          "centos-stream-8",
-          "centos-stream-9",
-          "rockylinux-8",
-          "rockylinux-9",
-        ]
+        os:
+          [
+            "almalinux-8",
+            "almalinux-9",
+            "centos-stream-9",
+            "centos-stream-10",
+            "rockylinux-8",
+            "rockylinux-9",
+          ]
         suite: ["epel"]
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
       - uses: ./.github/actions/test-kitchen
         with:
           suite: ${{ matrix.suite }}
@@ -73,6 +96,8 @@ jobs:
         os: ["ubuntu-2204", "ubuntu-2404"]
         suite: ["distro-nginx-full"]
     steps:
+      - name: Check out code
+        uses: actions/checkout@v4
       - uses: ./.github/actions/test-kitchen
         with:
           suite: ${{ matrix.suite }}
