--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ name: ci
 
 jobs:
   lint-unit:
-    uses: sous-chefs/.github/.github/workflows/lint-unit.yml@3.1.1
+    uses: sous-chefs/.github/.github/workflows/lint-unit.yml@main
     permissions:
       actions: write
       checks: write
@@ -21,96 +21,95 @@ jobs:
     needs: lint-unit
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         os:
-          - "almalinux-8"
-          - "almalinux-9"
-          - "amazonlinux-2023"
-          - "centos-7"
-          - "centos-stream-8"
-          - "centos-stream-9"
-          - "debian-10"
-          - "debian-11"
-          - "opensuse-leap-15"
-          - "rockylinux-8"
-          - "rockylinux-9"
-          - "ubuntu-1804"
-          - "ubuntu-2004"
-        suite:
-          - "distro"
-          - "repo"
-          - "repo-overrides"
-          - "epel"
-          - "nginx-full"
+          [
+            "almalinux-8",
+            "almalinux-9",
+            "amazonlinux-2023",
+            "centos-stream-9",
+            "centos-stream-10",
+            "debian-11",
+            "debian-12",
+            "rockylinux-8",
+            "rockylinux-9",
+            "ubuntu-2204",
+            "ubuntu-2404",
+          ]
+        suite: ["distro", "repo"]
         exclude:
-          - os: "opensuse-leap-15"
+          - os: "centos-stream-10"
             suite: "repo"
-          - os: "centos-7"
-            suite: "distro"
-          - os: "amazonlinux-2023"
-            suite: "epel"
-          - os: "debian-9"
-            suite: "epel"
-          - os: "debian-10"
-            suite: "epel"
-          - os: "debian-11"
-            suite: "epel"
-          - os: "ubuntu-1804"
-            suite: "epel"
-          - os: "ubuntu-2004"
-            suite: "epel"
-          - os: "fedora-latest"
-            suite: "epel"
-          - os: "opensuse-leap-15"
-            suite: "epel"
-          - os: "amazonlinux-2023"
-            suite: "nginx-full"
-          - os: "centos-7"
-            suite: "nginx-full"
-          - os: "centos-stream-8"
-            suite: "nginx-full"
-          - os: "centos-stream-9"
-            suite: "nginx-full"
-          - os: "almalinux-8"
-            suite: "nginx-full"
-          - os: "almalinux-9"
-            suite: "nginx-full"
-          - os: "rockylinux-8"
-            suite: "nginx-full"
-          - os: "rockylinux-9"
-            suite: "nginx-full"
-          - os: "amazonlinux"
-            suite: "nginx-full"
-          - os: "debian-10"
-            suite: "nginx-full"
-          - os: "debian-11"
-            suite: "nginx-full"
-          - os: "fedora-latest"
-            suite: "nginx-full"
-          - os: "opensuse-leap-15"
-            suite: "nginx-full"
-          - os: "amazonlinux-2023"
-            suite: "repo-overrides"
-          - os: "centos-7"
-            suite: "repo-overrides"
-          - os: "debian-10"
-            suite: "repo-overrides"
-          - os: "opensuse-leap-15"
-            suite: "repo-overrides"
-          - os: "ubuntu-1804"
-            suite: "repo-overrides"
-      fail-fast: false
-
     steps:
       - name: Check out code
         uses: actions/checkout@v4
-      - name: Install Chef
-        uses: actionshub/chef-install@3.0.0
-      - name: Dokken
-        uses: actionshub/test-kitchen@3.0.0
-        env:
-          CHEF_LICENSE: accept-no-persist
-          KITCHEN_LOCAL_YAML: kitchen.dokken.yml
+      - uses: ./.github/actions/test-kitchen
         with:
           suite: ${{ matrix.suite }}
           os: ${{ matrix.os }}
+
+  # TODO: This is currently broken
+  # integration-repo-overrides:
+  #   needs: lint-unit
+  #   runs-on: ubuntu-latest
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       os: ["ubuntu-2204", "ubuntu-2404"]
+  #       suite: ["repo-overrides"]
+  #   steps:
+  #     - name: Check out code
+  #       uses: actions/checkout@v4
+  #     - uses: ./.github/actions/test-kitchen
+  #       with:
+  #         suite: ${{ matrix.suite }}
+  #         os: ${{ matrix.os }}
+
+  integration-epel:
+    needs: lint-unit
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os:
+          [
+            "almalinux-8",
+            "almalinux-9",
+            "centos-stream-9",
+            "centos-stream-10",
+            "rockylinux-8",
+            "rockylinux-9",
+          ]
+        suite: ["epel"]
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+      - uses: ./.github/actions/test-kitchen
+        with:
+          suite: ${{ matrix.suite }}
+          os: ${{ matrix.os }}
+
+  integration-nginx-full:
+    needs: lint-unit
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        os: ["ubuntu-2204", "ubuntu-2404"]
+        suite: ["distro-nginx-full"]
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4
+      - uses: ./.github/actions/test-kitchen
+        with:
+          suite: ${{ matrix.suite }}
+          os: ${{ matrix.os }}
+
+  final:
+    runs-on: ubuntu-latest
+    needs: [integration, integration-nginx-full, integration-epel]
+    steps:
+      - run: echo ${{needs.integration.outputs}}
+      - run: echo ${{needs.integration-nginx-full.outputs}}
+      - run: echo ${{needs.integration-epel.outputs}}
